Unnecessary add-modules clause removed